--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.1",
-    "lodash": "^4.14.1"
+    "lodash": "^4.14.1",
+    "node-uuid": "^1.4.7"
   }
 }
