--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.1",
+    "jquery": "^3.1.0",
     "lodash": "^4.14.1",
     "node-uuid": "^1.4.7"
   }
