--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "bluebird": "^3.4.1",
+    "chess.js": "^0.10.2",
     "handlebars": "^4.0.5",
     "jquery": "^3.1.0",
     "lodash": "^4.14.1",
