--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
     "jquery": "^3.1.0",
     "lodash": "^4.14.1",
     "node-uuid": "^1.4.7"
+  },
+  "devDependencies": {
+    "chai": "^3.5.0",
+    "mocha": "^3.0.2"
   }
 }
